quick fix for header on tablet dimessiosn.

--- a/wp-content/themes/evolve-child/assets/scss/components/_header.scss
+++ b/wp-content/themes/evolve-child/assets/scss/components/_header.scss
@@ -1,6 +1,7 @@
 @use "../base/breakpoints" as breakpoints;
 
 .header-v2 {
+  width: 100%;
   position: fixed;
   z-index: 1000;
 
